--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,5 @@
 spring.application.name=Spring-security-Jwt-Token
+
+#custom user name and password
+spring.security.user.name=naresh
+spring.security.user.password= Rainier@1995
