--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,14 +1,7 @@
 spring.application.name=Spring-security-Jwt-Token
-
-#custom user name and password
-#spring.security.user.name=naresh
-#spring.security.user.password= Rainier@1995
-
-spring.datasource.url=jdbc:mysql://localhost:3306/springxml
+spring.datasource.url=jdbc:mysql://localhost:3306/user_details
 spring.datasource.username=root
 spring.datasource.password=root
-# JDBC driver
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-# Hibernate (JPA) settings
+spring.jpa.sho-sql =true
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
